full bleed issuee fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,18 +30,31 @@ $gray-7: #ebebeb;
 
 $white: #ffffff;
 
+@mixin full-bleed {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
+  right: 50%;
+  width: 100vw;
+}
+
 // Making all parent containers take full height
 html,
 body,
 #___gatsby,
 #gatsby-focus-wrapper {
-  height: 100%;
+  min-height: 100%;
 }
 
 #gatsby-focus-wrapper {
   display: flex;
   align-items: start;
   justify-content: center;
+  overflow: hidden;
 }
 
 // ----- TYPOGRAPHY -----
@@ -320,13 +333,9 @@ a {
 
     &:before {
       content: "";
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: -100vw;
-      right: -100vw;
-      z-index: -1;
       background-color: $gray-1;
+      z-index: -1;
+      @include full-bleed();
     }
 
     .connect-buttons-wrapper {
@@ -354,13 +363,9 @@ a {
 
   &:before {
     content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -100vw;
-    right: -100vw;
-    z-index: -1;
     background-color: $gray-1;
+    z-index: -1;
+    @include full-bleed();
   }
 
   .menuRight {
@@ -584,30 +589,26 @@ a {
 
   &:before {
     content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -100vw;
-    right: -100vw;
     z-index: -1;
     background-color: $gray-1;
+    @include full-bleed();
   }
 
   &.level-one {
     &:before {
-      opacity: 95%;
+      opacity: 0.95;
     }
   }
 
   &.level-two {
     &:before {
-      opacity: 90%;
+      opacity: 0.9;
     }
   }
 
   &.level-three {
     &:before {
-      opacity: 85%;
+      opacity: 0.85;
     }
   }
 }
